Remove Sexec-related modules
Drop gproc and lager dependencies

--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,5 @@
 {erl_opts, [
-    debug_info,
-    {parse_transform, lager_transform},
-    {lager_extra_sinks, [sexec]}
-]}.
-
-{deps, [
-    {gproc, "0.6.1"},
-    {lager, "3.6.1"}
+    debug_info
 ]}.
 
 {post_hooks, [{clean, "rm -fr _build ebin doc priv erl_crash.dump *.json c_src/*.o c_src/*.d"}]}.
